--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,12 +41,25 @@
     background: transparent;
 }
 
+.photo-blur-container:hover {
+    background: rgba(0, 0, 0, .7);
+    border-radius: 50%;
+}
+
 .photo-blur-container:hover img{
     -webkit-filter: blur(2px);
     filter: blur(2px);
+    transform: scale(1.2);
 }
 
 .photo-blur-container:hover .photo-blur-front {
     opacity: 1;
+}
+
+.label-block {
+    display: block;
+    text-align: center;
+    padding: 5px 0;
+    margin: 3px 0;
 }
 
